cucumber falla caso 2 pero tenemos reporte